--- a/frontend/src/pages/account/account.module.css
+++ b/frontend/src/pages/account/account.module.css
@@ -64,9 +64,45 @@
     color:rgb(82,82,82);
     border:1px solid white;
     border-radius: 1rem;
-
     height: 50px;
     padding:0 50px;
     margin:10px;
     box-sizing: border-box;
+}
+
+.sel_gender {
+    background-color: white;
+    border:1px solid #D7D7D7;
+    border-radius: 1rem;
+    width: 100%;
+    height: 50px;
+    padding:0 20px;
+    box-sizing: border-box;
+}
+
+.unsel_gender {
+    background-color: #D7D7D7;
+    border:1px solid white;
+    border-radius: 1rem;
+    width: 100%;
+    height: 50px;
+    padding:0 20px;
+    box-sizing: border-box;
+}
+
+.calender {
+    background-color: red;
+    position: absolute;
+    width: 100%;
+    height: 40%;
+    bottom: 0px;
+    border-radius: 1rem 1rem 2.5rem 2.5rem;
+}
+.input_calender {
+    background-color: blue;
+    width:90%;
+    height: 80%;
+    display: flex;
+    margin:auto;
+    border-radius: 0.5rem;
 }
