[S09P22B305-30] design : albumcard css 수정

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
   height: 98vh;
   box-sizing: border-box;
   margin: auto;
-  background-color: #050f33;
+  background-color: rgb(5, 15, 51);
   color: white;
 }
 
