--- a/frontend/src/components/AlbumCardSmall.module.css
+++ b/frontend/src/components/AlbumCardSmall.module.css
@@ -2,7 +2,9 @@
 
 .container {
   display: flex;
+  height: 100%;
   flex-direction: column;
+  box-sizing: border-box;
 }
 
 .image {
@@ -11,28 +13,45 @@
   margin-right: 10px;
   margin-top: 10px;
   border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .infoContainer {
   display: flex;
   align-items: center;
-  margin-left: 15px;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin: 0 10px;
+  height: 37%;
+  width:115px;
 }
 
+.musicinfo {
+  display:flex;
+  align-items:flex-start;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 80%;
+}
+
+.musicinfo span {
+  display: inline-block;
+  width:100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  text-align: start;
+  
+}
 .title {
   font-weight: bold;
 }
 
-.iconContainer {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin-right: 20px;
-}
 
 .icon {
   font-size: 24px;
   color: red;
   cursor: pointer;
+  width:20%;
 }
