[S09P22B305] feat : 반응형 프레임적용, 장르 선택 프레임 제작중

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,19 +1,14 @@
 .App {
   position: relative;
   text-align: center;
-  border: 5px solid black;
-  border-radius: 3rem;
-
-  height: 98vh;
+  /* border: 5px solid black;
+  border-radius: 3rem; */
   box-sizing: border-box;
-  margin: auto;
+  /* margin: auto; */
   background-color: rgb(5, 15, 51);
   color: white;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  min-width: 360px;
+  min-height: 612px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
