--- a/frontend/src/components/datapicker.module.css
+++ b/frontend/src/components/datapicker.module.css
@@ -2,15 +2,14 @@
   background-color: rgb(82, 92, 144);
   position: absolute;
   width: 100%;
-  height: 40%;
-  bottom: 0px;
-  border-radius: 1rem 1rem 2.5rem 2.5rem;
+  /* height: 40%; */
+  bottom:0px;
+  border-radius: 1rem 1rem 0rem 0rem;
 }
 
 .input_calender {
   background-color:rgba(5, 15, 51,0.3);
   width:90%;
-  height: 80%;
   display: flex;
   margin:auto;
   border-radius: 0.5rem;
@@ -19,14 +18,4 @@
 .selected {
   background-color: rgba(204, 204, 204, 0.3);
   margin:0 10px;
-}
-
-
-.scrollable_div p {
-  transition: transform 0.3s ease-in-out; /* Add a smooth transition for the transform property */
-}
-
-/* Add a CSS class to apply the animation */
-.scrollable_div.is-scrolling p {
-  transform: scale(1.2); /* You can customize the animation effect, e.g., scaling up */
 }
