--- a/frontend/src/components/CardSmall/CardSmall.module.css
+++ b/frontend/src/components/CardSmall/CardSmall.module.css
@@ -8,7 +8,7 @@
 }
 
 .image {
-  height: 63%;
+  height: 73%;
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 10px;
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  margin: 0 10px;
+  margin: 5px 10px;
   height: 37%;
   width: 115px;
 }
