[S09P22B305] feat : 마이페이지 프레임 제작중

--- a/frontend/src/components/bar.module.css
+++ b/frontend/src/components/bar.module.css
@@ -12,8 +12,8 @@
     bottom: 0px;
     width: 100%;
     background-color: #293858;
-    border-bottom-left-radius: 2.5rem;
-    border-bottom-right-radius: 2.5rem;
+    /* border-bottom-left-radius: 2.5rem;
+    border-bottom-right-radius: 2.5rem; */
 }
   
 .iconbar {
