--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,8 +7,8 @@
   /* margin: auto; */
   background-color: rgb(5, 15, 51);
   color: white;
-  min-width: 360px;
-  min-height: 612px;
+  /* min-width: 360px;
+  min-height: 612px; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
