--- a/frontend/src/components/CardSmall/CardSmall.module.css
+++ b/frontend/src/components/CardSmall/CardSmall.module.css
@@ -2,16 +2,17 @@
 
 .container {
   display: flex;
-  height: 100%;
+  height: 80%;
   flex-direction: column;
   box-sizing: border-box;
 }
 
 .image {
-  height: 73%;
+  /* height: 80%; */
+  width: 85%;
   margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 10px;
+  /* margin-right: 10px;
+  margin-top: 10px; */
   border-radius: 10px;
   box-sizing: border-box;
 }
