--- a/frontend/src/components/CardSmall/CardSmallContainer.module.css
+++ b/frontend/src/components/CardSmall/CardSmallContainer.module.css
@@ -1,7 +1,7 @@
 /* CardSmallContainer.module.css */
 
 .container {
-  height: 25vh;
+  height: 180px;
   margin: 10px;
   display: flex;
   flex-direction: row;
