--- a/frontend/src/components/MainContainer/MainContainer.module.css
+++ b/frontend/src/components/MainContainer/MainContainer.module.css
@@ -1,13 +1,10 @@
-/* CardLongContainer.module.css */
-
+/* MainContainer.module.css */
 .container {
-  width: 90%; /* 가로 길이 90% 설정 */
-  max-height: 70vh; /* 필요에 따라 조절 */
-  display: flex;
-  flex-direction: column; /* CardLong 컴포넌트들을 세로로 나열 */
-  overflow-y: auto; /* 세로로 스크롤 가능하도록 설정 */
+  /* margin-left: 15px; */
+  width: 100%;
+  max-height: 70vh;
+  overflow-y: auto;
   -ms-overflow-style: none;
-  /* scrollbar-width: none; */
 }
 
 /* If you'd like to hide the scrollbar for Webkit browsers as well */
