--- a/frontend/src/pages/ContainerBar.module.css
+++ b/frontend/src/pages/ContainerBar.module.css
@@ -1,6 +1,7 @@
 .pitch {
-  font-size: 16px;
+  font-size: 20px;
   text-align: left;
-  margin-top: 10px;
+  margin-top: 15px;
+  margin-bottom: 10px;
   margin-left: 20px;
 }
