--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,11 +4,14 @@
   /* border: 5px solid black;
   border-radius: 3rem; */
   box-sizing: border-box;
-  /* margin: auto; */
-  background-color: rgb(5, 15, 51);
   color: white;
-  /* min-width: 360px;
-  min-height: 612px; */
+  min-width: 360px;
+  min-height: 612px;
+  width: 100%;
+  height:100%;
+  background-image: url('../public/assets/background.png');
+  background-size: cover; /* 배경 이미지를 컨테이너에 맞게 크기 조절 */
+  background-repeat: no-repeat; /* 배경 이미지 반복 없음 */
 }
 
 @media (prefers-reduced-motion: no-preference) {
