--- a/frontend/src/components/CardLong/CardLongContainer.module.css
+++ b/frontend/src/components/CardLong/CardLongContainer.module.css
@@ -2,14 +2,14 @@
 
 .container {
   width: 90%; /* 가로 길이 90% 설정 */
-  max-height: 60vh; /* 필요에 따라 조절 */
+  /* max-height: 100%; 필요에 따라 조절 */
   display: flex;
   flex-direction: column; /* CardLong 컴포넌트들을 세로로 나열 */
-  overflow-x: hidden; /* 세로로 스크롤 가능하도록 설정 */
-  overflow-y: auto; /* 세로로 스크롤 가능하도록 설정 */
+  overflow-y: none; /* 세로로 스크롤 가능하도록 설정 */
   white-space: nowrap;
   -ms-overflow-style: none;
-  margin-left: 5px;
+  /* margin-left: 5px; */
+  margin: auto;
 
   /* scrollbar-width: none; */
 }
