--- a/frontend/src/components/MainContainer/MainContainer.module.css
+++ b/frontend/src/components/MainContainer/MainContainer.module.css
@@ -2,7 +2,8 @@
 .container {
   /* margin-left: 15px; */
   width: 100%;
-  max-height: 70vh;
+  /* max-height: 70vh; */
+  height:100%;
   overflow-y: auto;
   -ms-overflow-style: none;
 }
