--- a/frontend/src/components/bar.module.css
+++ b/frontend/src/components/bar.module.css
@@ -1,5 +1,5 @@
 .topbar {
-    margin:20px 25px 0 25px;
+    margin:10px 25px 0 25px;
     height: 10%;
     display: flex;
     align-items: center;
@@ -11,7 +11,8 @@
     position: absolute;
     bottom: 0px;
     width: 100%;
-    background-color: #293858;
+    border-top:#90FFF8 2px solid;
+    height: 12vh;
     /* border-bottom-left-radius: 2.5rem;
     border-bottom-right-radius: 2.5rem; */
 }
@@ -32,7 +33,7 @@
     align-items: center;
     flex-direction: column;
     cursor: pointer;
-    color:#797DC5;
+    color:#90FFF8;
     transition: transform 0.3s; /* 호버 시 부드러운 변환 효과를 위한 트랜지션 설정 */
 }
 
