--- a/frontend/src/components/MainContainer/MainContainer.module.css
+++ b/frontend/src/components/MainContainer/MainContainer.module.css
@@ -1,9 +1,7 @@
 /* MainContainer.module.css */
 .container {
-  /* margin-left: 15px; */
   width: 100%;
-  /* max-height: 70vh; */
-  height:100%;
+  height:75vh;
   overflow-y: auto;
   -ms-overflow-style: none;
 }
