[S09P22B305-246] fix : 바텀바 아이콘 변화오류, 장르&패스워드 찾기  설문 프레임,

--- a/frontend/src/pages/account/genresurvey.module.css
+++ b/frontend/src/pages/account/genresurvey.module.css
@@ -1,20 +1,16 @@
 .container {
-
-    
+    height: 97vh;
 }
 
 .genrelist {
     width: 80%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
+    margin: 10% auto;
 }
 
 .genre {
     border-radius: 50%;
-    width: 75px;
-    height: 75px;
+    width: 90px;
+    height: 90px;
     background-color: red;
     margin:10px;
     cursor: pointer;
