--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,8 +7,8 @@
   color: white;
   min-width: 360px;
   min-height: 612px;
-  width: 100%;
-  height:100%;
+  width: 100vw;
+  height:100vh;
   background-image: url('../public/assets/background.png');
   background-size: cover; /* 배경 이미지를 컨테이너에 맞게 크기 조절 */
   background-repeat: no-repeat; /* 배경 이미지 반복 없음 */
