--- a/frontend/src/components/MainContainer/MainContainer.module.css
+++ b/frontend/src/components/MainContainer/MainContainer.module.css
@@ -1,7 +1,7 @@
 /* MainContainer.module.css */
 .container {
   width: 100%;
-  height:75vh;
+  height:100%;
   overflow-y: auto;
   -ms-overflow-style: none;
 }
