--- a/frontend/src/pages/mainhome.module.css
+++ b/frontend/src/pages/mainhome.module.css
@@ -1,6 +1,6 @@
 .topbar {
     margin:10px 25px 0 25px;
-    height: 10vh;
+    height: 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
