--- a/frontend/src/pages/musicsearch.module.css
+++ b/frontend/src/pages/musicsearch.module.css
@@ -3,7 +3,8 @@
     height: 10%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
+    flex-direction: column;
     box-sizing: border-box;
 }
 .pitch {
