[S09P22B305-246] feat : 인기차트 적용

--- a/frontend/src/pages/musicDetail.module.css
+++ b/frontend/src/pages/musicDetail.module.css
@@ -13,6 +13,7 @@
 .lyricsContainer {
   position: fixed;
   top: 53vh;
+  left:0;
   height: 50vh; /* 화면 세로 크기의 50%만큼 높이를 설정 */
   color: aquamarine;
   margin-bottom: 3%;
