[S09P22B305-246] feat : 검색기능 연결

--- a/frontend/src/pages/musicDetail.module.css
+++ b/frontend/src/pages/musicDetail.module.css
@@ -55,8 +55,8 @@
 
 .musicImage {
   margin-top: 10%;
-  max-width: 35%;
-  max-height: 35%;
+  width: 150px;
+  height: 150px;
   border-radius: 20px;
 }
 
