--- a/frontend/src/pages/account/findpw.module.css
+++ b/frontend/src/pages/account/findpw.module.css
@@ -2,11 +2,12 @@
     background-color: #D7D7D7;
     border:1px solid white;
     border-radius: 1rem;
-    width: 60%;
+    width: 70%;
     height: 50px;
     padding:0 20px;
     box-sizing: border-box;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 .findbtn {
     border: 1px solid white;
