--- a/frontend/src/components/CardLong/CardLongContainer.module.css
+++ b/frontend/src/components/CardLong/CardLongContainer.module.css
@@ -3,6 +3,7 @@
 .container {
   width: 90%; /* 가로 길이 90% 설정 */
   /* max-height: 100%; 필요에 따라 조절 */
+  height: 100%;
   display: flex;
   flex-direction: column; /* CardLong 컴포넌트들을 세로로 나열 */
   overflow-y: none; /* 세로로 스크롤 가능하도록 설정 */
