--- a/frontend/src/components/CardSmall/CardSmallContainer.module.css
+++ b/frontend/src/components/CardSmall/CardSmallContainer.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  overflow-y:none;
   white-space: nowrap;
   scrollbar-width: none;
   -ms-overflow-style: none;
