--- a/frontend/src/pages/account/changepw.module.css
+++ b/frontend/src/pages/account/changepw.module.css
@@ -9,19 +9,20 @@
     justify-content: center; /* 오버레이 내의 내용을 가운데 정렬합니다 */
     align-items: center;
 }
+
 .modal {
     position: fixed;
-    top:35%;
+    top:20%;
     left: 5%;
     width: 90%;
-    height: 280px;
+    height: 450px;
     display:flex;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     flex-direction:column;
     background-image:url('../../../public/assets/background.png');
     padding:20px;
-    box-sizing:border-box;
+    box-sizing:border-box
 }
 
 .input {
@@ -41,12 +42,13 @@
     border-radius: 10px;
     color:white;
 }
+
 .input_account {
     background-color: #D7D7D7;
     border:1px solid white;
     border-radius: 1rem;
-    margin:0 5% ;
     width: 90%;
+    margin:0 5%;
     height: 40px;
     padding:0 20px;
     box-sizing: border-box;
