--- a/frontend/src/pages/musicDetail.module.css
+++ b/frontend/src/pages/musicDetail.module.css
@@ -1,12 +1,15 @@
 /* musicDetail.module.css */
 .blur {
+  position: absolute;
+  top:0;
+  z-index: 1001;
   background-size: cover; /* 이미지를 요소의 전체 크기에 맞춰서 보여줍니다. */
   background-repeat: no-repeat;
   background-position: center center;
   filter: blur(3px);
   opacity: 0.7;
   width: 120vw; /* 너비를 뷰포트의 105%로 설정 */
-  height: 47%; /* 높이를 뷰포트의 50%로 설정 */
+  height: 50%; /* 높이를 뷰포트의 50%로 설정 */
   border-radius: 20px;
 }
 
@@ -32,18 +35,25 @@
 }
 
 .musicContainer {
-  flex: 50;
-  position: absolute;
+  /* flex: 50;
+  position: absolute; */
+  width: 90%;
   margin-top: 15%;
+  z-index: 1002;
   /* z-index: 2000; */
   /* margin-top: 5%; */
 }
 
 .iconContainer {
-  background-size: contain;
   height: 10vw;
-  justify-content: center;
+  width: 90%;
+  margin: 0 5%;
+  padding:14px 0;
+  border-radius: 20px;
+  justify-content: space-evenly;
+  align-items: center;
   display: flex; /* 이 부분 추가: 이미지들을 가로로 나열하기 위해 flexbox 사용 */
+  background-color: rgba(240, 248, 255,0.2);  
 }
 
 .iconContainer img {
@@ -54,7 +64,7 @@
 }
 
 .musicImage {
-  margin-top: 10%;
+  margin: 10% 0;
   width: 150px;
   height: 150px;
   border-radius: 20px;
@@ -69,4 +79,11 @@
   font-weight: bold;
   font-size: 16px;
   margin-bottom: 3%;
+}
+
+.icon {
+  font-size: 35px;
+  color: red;
+  cursor: pointer;
+  width: 20%;
 }
