--- a/frontend/src/pages/account/withdrawmodal.module.css
+++ b/frontend/src/pages/account/withdrawmodal.module.css
@@ -22,8 +22,18 @@
     background-image:url('../../../public/assets/background.png');
     padding:20px;
     box-sizing:border-box;
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
 }
-
+/* fadeIn 애니메이션 */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 .input {
     background-color: #D7D7D7;
     border:1px solid white;
