--- a/frontend/src/pages/musicDetail.module.css
+++ b/frontend/src/pages/musicDetail.module.css
@@ -14,13 +14,9 @@
 }
 
 .lyricsContainer {
-  position: fixed;
-  top: 53vh;
-  left:0;
-  height: 50vh; /* 화면 세로 크기의 50%만큼 높이를 설정 */
+  /* height: 50vh; 화면 세로 크기의 50%만큼 높이를 설정 */
   color: aquamarine;
-  margin-bottom: 3%;
-  width: 100%;
+  margin:10% 0;
 }
 
 .lyrics {
@@ -30,7 +26,7 @@
   text-align: center;
   max-height: 35vh;
   overflow-y: auto;
-  margin:0 10%;  
+  margin:5% 10%;  
   width: 80%; /* 가로 폭을 설정하거나 필요한 경우 조절 */
 }
 
